# first-class-variants

./: Cargo.toml  README.md
src/: lib.rs
tests/: smoke.rs
