[package]
name = "first-class-variants"
version = "1.0.0"
authors = ["Ari Lotter <arilotter@gmail.com>"]
edition = "2018"
description = "A procedural macro to generate first-class structs for enum variants"
license = "MIT"


[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
